[refactor] replace `Arrays.asList` by `List.of`
`List.of` is preferred because it
1. Optimized, and
2. Returns a truly immutable object.

While `Arrays.asList` returns a list that allows modifications, e.g. using method `*.set(index, value)`.