@@ -21,10 +21,7 @@ import static java.util.Collections.list;
 import java.net.Inet6Address;
 import java.net.InetAddress;
 import java.net.SocketException;
-import java.util.Arrays;
-import java.util.Iterator;
-import java.util.LinkedHashSet;
-import java.util.StringJoiner;
+import java.util.*;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
@@ -52,7 +49,7 @@ public class NetworkInterface {
   }
 
   NetworkInterface(String name, InetAddress... inetAddresses) {
-    this(name, Arrays.asList(inetAddresses));
+    this(name, List.of(inetAddresses));
     this.isLoopback = isLoopBackFromINetAddresses(this.inetAddresses);
   }
 
